<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<RelativeLayout
    android:id="@+id/relavive"
    android:layout_width="500dp"
    android:layout_height="300dp"
    android:layout_marginTop="70dp"
    android:layout_marginLeft="80dp"
    android:textAlignment="center"
    tools:ignore="MissingConstraints"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/hikemate"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/app_name" />


    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_toEndOf="@id/logoImage"
        android:layout_alignBaseline="@id/logoImage"
        android:layout_marginStart="16dp"
        android:textAlignment="viewStart"
        android:gravity="center_vertical" />

</RelativeLayout>



    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/relavive"
        app:layout_constraintVertical_bias="0.4"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <EditText
        android:id="@+id/editTPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName"
        app:layout_constraintVertical_bias="0.1"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTPassword"
        app:layout_constraintVertical_bias="0.175"
        />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:onClick="register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintVertical_bias="0.175" />

</androidx.constraintlayout.widget.ConstraintLayout>